examples/rust/failing/derive_attr_with_paths/ExpectedCurrently.rs
<<<<<<< LEFT
#[derive(Debug, my::Trait)]
||||||| BASE
#[derive(Debug)]
=======
#[derive(Debug, their::OtherTrait)]
>>>>>>> RIGHT
struct Foo;
